Addition of hero page
Signed-off-by: Abhijith Ganesh <git.watch.abhijith@outlook.com>

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.gradient {
+    background: linear-gradient(90deg, #FFF 2%, #BDBDBD 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
